--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> ॥ शुभ विवाह - 15 मार्च 2021 ॥</title>
+    <title> ॥ शुभ विवाह - 26 मार्च 2021 ॥</title>
     <meta name="description" content="अवधेश संग निभा ">
     <link rel="icon" href="img/b.png">
     <meta property="og:image"
@@ -202,6 +202,7 @@
                 </div>
             </div>
         </div>
+        <p style="text-align: center;color: rgb(179, 163, 171); font-family: 'cursive', serif; font-size: 1.2rem; ">Design by Raushan*</p>
     </div>
     <marquee class="m1" behavior="scroll" direction="up" scrolldelay=100> <img src="img/1.png?v=44" height="50px"
             width="40px" /><br><br> <img src="img/2.png?v=44" height="50px" width="40px" /><br><br> <img
@@ -247,6 +248,7 @@
             width="40px" /><br><br> <img src="img/5.png?v=44" height="50px" width="40px" /><br><br> <img
             src="img/6.png?v=44" height="50px" width="40px" /><br><br> <img src="img/1.png?v=44" height="50px"
             width="40px" /><br><br> <img src="img/2.png?v=44" height="50px" width="40px" /><br><br> </marquee>
-</body>
+        
+        </body>
 
 </html>
