--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="preloader" class="preloader" style="z-index: 4000;">
             <div class="loader-section section-left">
                 <div class="wel animate__animated animate__slideInLeft animate__slow">शुभ ~ </div>
-                <div class="centered"> <img src="img/ladka.jpg" alt="Avatar woman"
+                <div class="centered"> <img src="img/ladka.png" alt="Avatar woman"
                         class=" animate__animated animate__backInRight animate__slow">
                     <div class="name-left animate__animated animate__slideInLeft animate__slow">अवधेश</div>
                 </div>
@@ -131,7 +131,7 @@
             </div>
             <div class="row mt-3">
                 <div class="col-md-4">
-                    <div class="my-3 var_photo"> <img src="./img/ladka.jpg" alt="laka ka photo" class="img-thumbnail" />
+                    <div class="my-3 var_photo"> <img src="./img/ladka.png" alt="laka ka photo" class="img-thumbnail" />
                     </div>
                     <div class="ml-md-5 var_about">
                         <h2 class="mb-0">चिरं० अवधेश कुमार</h2>
