--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 </div>
             </div>
         </div>
-        <p style="text-align: center;color: rgb(179, 163, 171); font-family: 'cursive', serif; font-size: 1.2rem; ">Design by Raushan*</p>
+        <p style="text-align: center;color: rgb(179, 163, 171); font-family: 'cursive', serif; font-size: 1.2rem; ">Design by <a href="https://www.facebook.com/raushanStar" target="_blank"> Raushan*</a></p>
     </div>
     <marquee class="m1" behavior="scroll" direction="up" scrolldelay=100> <img src="img/1.png?v=44" height="50px"
             width="40px" /><br><br> <img src="img/2.png?v=44" height="50px" width="40px" /><br><br> <img
