--- a/index.html
+++ b/index.html
@@ -188,15 +188,14 @@
         </div>
         <div class="row mt-0">
             <div class="col">
-                <div class="counter animate__animated animate__headShake animate__slow animate__infinite">
+                <div class="counter animate__animated animate__pulse animate__slow animate__infinite">
                     <div id="countdown ">
-                        <h3 style="color: yellow; font-family: 'Playfair Display', serif; font-size: 1.2rem; ">Don't
-                            miss it...</h3>
+                        <h3 style="color: yellow; font-family: 'Playfair Display', serif; font-size: 1.2rem; ">आना ना भूलियेगा...</h3>
                         <ul class="mt-0">
-                            <li><span id="days"></span>Days</li>
-                            <li><span id="hours"></span>hours</li>
-                            <li><span id="minutes"></span>minutes</li>
-                            <li><span id="seconds"></span>seconds</li>
+                            <li><span id="days"></span>दिन</li>
+                            <li><span id="hours"></span>घंटा</li>
+                            <li><span id="minutes"></span>मिनट</li>
+                            <li><span id="seconds"></span>सेकंड</li>
                         </ul>
                     </div>
                 </div>
