--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> ॥ शुभ विवाह - 26 मार्च 2021 ॥</title>
+    <title> ॥ शुभ विवाह - 26 अप्रैल 2021 ॥</title>
     <meta name="description" content="अवधेश संग निभा ">
     <link rel="icon" href="img/b.png">
     <meta property="og:image"
