--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> ॥ शुभ विवाह - 26 अप्रैल 2021 ॥</title>
+    <title> ॥ शुभ विवाह - 26 मार्च 2021 ॥</title>
     <meta name="description" content="अवधेश संग निभा ">
     <link rel="icon" href="img/b.png">
     <meta property="og:image"
@@ -49,7 +49,7 @@
             </div>
             <div class="loader-section section-right">
                 <div class="come animate__animated animate__slideInRight animate__slow">&nbsp;विवाह</div>
-                <div class="centered"> <img src="img/ladki.jpg" alt="Avatar man"
+                <div class="centered"> <img src="img/ladki.png" alt="Avatar man"
                         class="animate__animated animate__backInLeft animate__slow">
                     <div class="name-right animate__animated animate__slideInRight animate__slow">निभा</div>
                 </div>
@@ -145,7 +145,7 @@
                     <p class="sang-p">संग</p>
                 </div>
                 <div class="col-md-4 mt-3">
-                    <div class="my-3 var_photo"> <img src="./img/ladki.jpg" alt="laki ka photo" class="img-thumbnail" />
+                    <div class="my-3 var_photo"> <img src="./img/ladki.png" alt="laki ka photo" class="img-thumbnail" />
                     </div>
                     <div class="mr-md-5 var_about">
                         <h2 class="mb-0">आयु निभा कुमारी</h2>
