--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> ॥ शुभ विवाह - 26 मार्च 2021 ॥</title>
     <meta name="description" content="अवधेश संग निभा ">
-    <link rel="icon" href="img/b.png">
+    <link rel="icon" href="img/both.png">
+
     <meta property="og:image"
         content="https://raw.githubusercontent.com/arrbxr/digitalcard/main/img/hand.png?token=AG75NNQHHGTHOJYUT4655US7365H4" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
