--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="img/both.png">
 
     <meta property="og:image"
-        content="https://raw.githubusercontent.com/arrbxr/digitalcard/main/img/hand.png?token=AG75NNQHHGTHOJYUT4655US7365H4" />
+        content="img/both.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
