--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="col-md-4 mt-4">
                     <div class="manglik_inner">
                         <h3 class="mb-0">॥ शुभ हल्दी ॥</h3>
-                        <p class="mb-0">दिनांक 24 अप्रैल 2021</br> ( शुक्रवार )</p>
+                        <p class="mb-0">दिनांक 25 अप्रैल 2021</br> ( शुक्रवार )</p>
                     </div>
                 </div>
                 <div class="col-md-4 mt-4">
@@ -167,7 +167,7 @@
                     </div>
                     <div class="mr-md-5 var_about">
                         <h2 class="mb-0">आयु निभा कुमारी</h2>
-                        <p class="mb-0">सुपुत्री: श्रीमती ***** देवी व श्री विनोद यादव</p>
+                        <p class="mb-0">सुपुत्री: श्रीमती उषा देवी व श्री विनोद यादव</p>
                         <p class="mb-0"> ग्राम - मोरमा, थाना- लखीसराय</p>
                         <p>जिला- लखीसराय(बिहार)</p>
                     </div>
@@ -187,15 +187,15 @@
             <div class="row mt-5 var_family">
                 <div class="col-md-4">
                     <h2 class="mb-0">दर्शनाभिलाषी :</h2>
-                    <p> सर्वश्री **** **** ****, *******, एवं समस्त यादव परिवार।</p>
+                    <p> सर्वश्री संजय यादव,अजय यादव ,प्रमोद यादव ,बबलु यादव,सुमन सौरभ ,मनीष सिंह धोनी  एवं समस्त यादव परिवार।</p>
                 </div>
                 <div class="col-md-4 mt-2 mt-md-0">
                     <h2 class="mb-0">स्वागताकांक्षी :</h2>
-                    <p>प्रेमन यादव </p>
+                    <p>चानन यादव </p>
                 </div>
                 <div class="col-md-4 mt-2 mt-md-0">
                     <h2 class="mb-0">आकांक्षी :</h2>
-                    <p>*******,******</p>
+                    <p>प्रेमन यादव</p>
                 </div>
             </div>
         </div>
@@ -208,7 +208,7 @@
             <div class="col">
                 <div class="counter animate__animated animate__pulse animate__slow animate__infinite">
                     <div id="countdown ">
-                        <h3 style="color: yellow; font-family: 'Playfair Display', serif; font-size: 1.2rem; ">आना ना भूलियेगा...</h3>
+                        <h3 style="color: yellow; font-family: 'Playfair Display', serif; font-size: 1.2rem; ">आना ना भूलियेगा...🤗</h3>
                         <ul class="mt-0">
                             <li><span id="days"></span>दिन</li>
                             <li><span id="hours"></span>घंटा</li>
