--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
             </div>
         </div>
-        <p style="text-align: center;padding: 25px 50px;color: rgb(179, 163, 171); font-family: Georgia, serif; font-size: 1.2rem; word-spacing: 5px; ">Design  by  <a style="color: rgb(253, 247, 250);" href="https://www.facebook.com/raushanStar" target="_blank"> Raushan*</a></p>
+        <p style="text-align: center;padding: 15px 30px;color: rgb(179, 163, 171); font-family: Georgia, serif; font-size: 1.2rem; word-spacing: 5px; ">Design  by  <a style="color: rgb(253, 247, 250);background-color: rgb(3, 1, 1);" href="https://www.facebook.com/raushanStar" target="_blank"> Raushan*</a></p>
     </div>
     <marquee class="m1" behavior="scroll" direction="up" scrolldelay=100> <img src="img/1.png?v=44" height="50px"
             width="40px" /><br><br> <img src="img/2.png?v=44" height="50px" width="40px" /><br><br> <img
