--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> ॥ शुभ विवाह - 26 अप्रैल 2021 ॥</title>
-    <meta name="description" content="अवधेश संग निभा ">
+    <meta name="description" content="अवधेश weds निभा 
+    (Invitation Card)">
     <link rel="icon" href="img/both.png">
 
     <meta property="og:image"
