--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title> ॥ शुभ विवाह - 26 अप्रैल 2021 ॥</title>
     <meta name="description" content="अवधेश weds निभा(Invitation Card)">
     <link rel="icon" href="img/both.png">
-    <meta property="og:image"
-          content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/img/ladka.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/both1.jpg"/>
     <!-- <meta property="og:image"
         content="img/both.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -198,6 +197,9 @@
                     <h2 class="mb-0">आकांक्षी :</h2>
                     <p>प्रेमन यादव</p>
                 </div>
+            </div>
+            <div class="form1">
+                <button><a href="form.html">आशीर्वाद भेजें</a></button>
             </div>
         </div>
         <div class="row mt-3 mb-3">
