--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title> ॥ शुभ विवाह - 26 अप्रैल 2021 ॥</title>
     <meta name="description" content="अवधेश weds निभा(Invitation Card)">
     <link rel="icon" href="img/both.png">
-    <meta property="og:image" content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/img/both1.png?token=AODOFXUBZLDMJ3I7JPH5FN3AHKJFC" />
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/arrbxr/adityawedding/master/img/both.png?token=AG75NNVQYEVLX374NPAIJ4TAHJSCC" />
+<!--     <meta property="og:image" content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/img/both1.png?token=AODOFXUBZLDMJ3I7JPH5FN3AHKJFC" /> -->
     <!-- <meta property="og:image"
         content="img/both.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
