--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> ॥ शुभ विवाह - 26 अप्रैल 2021 ॥</title>
     <meta name="description" content="अवधेश weds निभा(Invitation Card)">
-    <link rel="icon" href="img/both1.png">
+    <link rel="icon" href="img/both.png">
     <meta property="og:image"
-        content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/img/both1.png?token=AODOFXSB325CNSBP4HF7SN3AHKMGM" />
+        content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/img/both.png?token=AODOFXSA2AJN75BCFL4PFCTAHL64Q" />
 <!--     <meta property="og:image" content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/img/both1.png?token=AODOFXUBZLDMJ3I7JPH5FN3AHKJFC" /> -->
     <!-- <meta property="og:image"
         content="img/both.png" /> -->
