--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> ॥ शुभ विवाह - 26 अप्रैल 2021 ॥</title>
-    <meta name="description" content="अवधेश weds निभा(Invitation Card)">
+    <meta name="description" content="अवधेश weds निभा ">
     <link rel="icon" href="img/both.png">
     <meta property="og:image"
         content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/img/both.png?token=AODOFXSA2AJN75BCFL4PFCTAHL64Q" />
-<!--     <meta property="og:image" content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/img/both1.png?token=AODOFXUBZLDMJ3I7JPH5FN3AHKJFC" /> -->
-    <!-- <meta property="og:image"
-        content="img/both.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -27,11 +24,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Flavors&display=swap" rel="stylesheet">
-    <script
-        type="text/JavaScript"> //courtesy of BoogieJack.com function killCopy(e){ return false } function reEnable(){ return true } document.onselectstart=new Function ("return false") if (window.sidebar){ document.onmousedown=killCopy document.onclick=reEnable } </script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script type="text/JavaScript">
+        //courtesy of BoogieJack.com function killCopy(e){ return false } function reEnable(){ return true } document.onselectstart=new Function ("return false") if (window.sidebar){ document.onmousedown=killCopy document.onclick=reEnable } 
+    </script> <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BKLFXTQHBQ"></script>
-    <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-BKLFXTQHBQ'); </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-BKLFXTQHBQ');
+    </script>
     <script src="count.js"></script>
 </head>
 
@@ -189,15 +194,15 @@
             <div class="row mt-5 var_family">
                 <div class="col-md-4">
                     <h2 class="mb-0">दर्शनाभिलाषी :</h2>
-                    <p> सर्वश्री संजय यादव,अजय यादव ,प्रमोद यादव ,बबलु यादव,सुमन सौरभ ,मनीष सिंह धोनी  एवं समस्त यादव परिवार।</p>
+                    <p> सर्वश्री संजय यादव,अजय यादव ,बबलु यादव,सुमन सौरभ ,मनीष सिंह धोनी  एवं समस्त यादव परिवार।</p>
                 </div>
                 <div class="col-md-4 mt-2 mt-md-0">
                     <h2 class="mb-0">स्वागताकांक्षी :</h2>
-                    <p>चानन यादव </p>
+                    <p>चचंद्रशेखर यादव </p>
                 </div>
                 <div class="col-md-4 mt-2 mt-md-0">
                     <h2 class="mb-0">आकांक्षी :</h2>
-                    <p>प्रेमन यादव</p>
+                    <p>राम प्रसाद यादव</p>
                 </div>
             </div>
             <div class="form1">
