--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google" content="notranslate">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> ॥ शुभ विवाह - 26 अप्रैल 2021 ॥</title>
-    <meta name="description" content="अवधेश weds निभा ">
+    <meta name="description" content="अवधेश weds निभा (Invitation Card)💌">
     <link rel="icon" href="img/both.png">
     <meta property="og:image"
         content="https://raw.githubusercontent.com/raushanstar/awi-weds-nibha/main/img/both.png?token=AODOFXSA2AJN75BCFL4PFCTAHL64Q" />
