--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
             <div class="row mt-5 var_family">
                 <div class="col-md-4">
                     <h2 class="mb-0">दर्शनाभिलाषी :</h2>
-                    <p> सर्वश्री संजय यादव,अजय यादव ,बबलु यादव,सुमन सौरभ ,मनीष सिंह धोनी  एवं समस्त यादव परिवार।</p>
+                    <p> सर्वश्री संजय यादव,अजय यादव ,बबलु यादव,पंकज यादव , प्रमोद यादव , रनवीर कुमार ,नरेन्दर , सुमन सौरभ ,मनीष सिंह धोनी  एवं समस्त यादव परिवार।</p>
                 </div>
                 <div class="col-md-4 mt-2 mt-md-0">
                     <h2 class="mb-0">स्वागताकांक्षी :</h2>
-                    <p>चंद्रशेखर यादव </p>
+                    <p>चंद्रशेखर यादव , सागर यादव  </p>
                 </div>
                 <div class="col-md-4 mt-2 mt-md-0">
                     <h2 class="mb-0">आकांक्षी :</h2>
