--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="col-md-4 mt-4">
                     <div class="manglik_inner">
                         <h3 class="mb-0">॥ वर-वधु स्वागत समारोह ॥</h3>
-                        <p class="mb-0">दिनांक 28 अप्रैल 2021</br> ( मंगलवार )</p>
+                        <p class="mb-0">दिनांक 28 अप्रैल 2021</br> ( बुधवार )</p>
                     </div>
                 </div>
             </div>
@@ -202,10 +202,22 @@
                 </div>
                 <div class="col-md-4 mt-2 mt-md-0">
                     <h2 class="mb-0">आकांक्षी :</h2>
-                    <p>राम प्रसाद यादव</p>
+                    <p>राम प्रसाद यादव , प्रेमन यादव</p>
                 </div>
             </div>
         </div>
+
+            <!--contact-->
+
+<div class="row mt-2 mb-3">
+    <div class="col text-center">
+        <button type="button" class="btn btn-sm btn-warning text-white" disabled data-toggle="modal" data-target="#exampleModalCenter">
+            Contact No. : <a href="tel:+917667133051" class="text-white"> +91 6205842767</a>
+            <!-- Awadesh : <a href="tel:+917667133051" class="text-white"> +91 6205842767</a> -->
+        </button>
+    </div>
+</div>
+
 
         <div class="row mt-3 mb-3">
             <div class="col message">
