--- a/index.html
+++ b/index.html
@@ -26,18 +26,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Flavors&display=swap" rel="stylesheet">
     <script type="text/JavaScript">
         //courtesy of BoogieJack.com function killCopy(e){ return false } function reEnable(){ return true } document.onselectstart=new Function ("return false") if (window.sidebar){ document.onmousedown=killCopy document.onclick=reEnable } 
-    </script> <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BKLFXTQHBQ"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M6X3KX3HG6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-BKLFXTQHBQ');
-    </script>
-    <script src="count.js"></script>
+  gtag('config', 'G-M6X3KX3HG6');
+</script>
 </head>
 
 <body>
