--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Flavors&display=swap" rel="stylesheet">
     <script type="text/JavaScript">
         //courtesy of BoogieJack.com function killCopy(e){ return false } function reEnable(){ return true } document.onselectstart=new Function ("return false") if (window.sidebar){ document.onmousedown=killCopy document.onclick=reEnable } 
-        <script src="count.js"></script>
+    </script>
+    <script src="count.js"></script>
 </head>
 
 <body>
