--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="row mt-2 mb-3">
             <div class="col text-center">
                 <button type="button" class="btn btn-sm btn-warning text-white" data-toggle="modal" data-target="#exampleModalCenter">
-                    आशीर्वाद भेजे
+                    Send wishes
                 </button>
             </div>
         </div>
