--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             <div class="row ganesh">
                 <div class="col-md-4 col-sm-4 text-md-right mb-3"> <img src="img/ganesh.png" alt=""></div>
                 <div class="col-md-4 co-sm-4">
-                    <h4 class="mantra">नमामि विध्न नाशनं, गणाधिषं गजाननम्।</h4>
-                    <h4 class="mantra">रिद्धि- सिद्धि दायकं, वर प्रदं विनायकम्॥</h4>
+                    <h4 class="mantra">मंगलम् भगवान विष्णु मंगलम गरुड़ ध्वज।</h4>
+                    <h4 class="mantra">मंगलम् पुंडरीकाक्ष मंगलाय तनो हरि।।</h4>
                 </div>
                 <div class="col-md-4 col-sm-4 text-md-left d-none d-md-block"> <img src="img/ganesh1.png" alt=""></div>
             </div>
             <div class="row mt-4">
                 <div class="col-md-12 manglik">
-                    <h2 class="text-center mb-0">~ शगुन के पल ~</h2>
+                    <h2 class="text-center mb-0">|| मांगलिक बेलाएँ || </h2>
                 </div>
             </div>
             <div class="row mt-0">
@@ -112,7 +112,7 @@
                 <div class="col-md-4 mt-4">
                     <div class="manglik_inner">
                         <h3 class="mb-0">॥ शुभ हल्दी ॥</h3>
-                        <p class="mb-0">दिनांक 25 अप्रैल 2021</br> ( शुक्रवार )</p>
+                        <p class="mb-0">दिनांक 25 अप्रैल 2021</br> ( रविवार )</p>
                     </div>
                 </div>
                 <div class="col-md-4 mt-4">
@@ -187,7 +187,7 @@
             </div>
             <div class="row mt-1">
                 <div class="col-md-12 parinsav">
-                    <h3 class="mb-0">!! मांगलिक परिणयोत्सव !!</h3>
+                    <h3 class="mb-0">|| मंगल परिणय  ||</h3>
                     <p class="mb-0">के मधुर बेला पर पधारकर वर कन्या को शुभाशीर्वाद प्रदान कर हमें अनुगृहीत करें।</p>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="col-md-4 mt-2 mt-md-0">
                     <h2 class="mb-0">आकांक्षी :</h2>
-                    <p>राम प्रसाद यादव , प्रेमन यादव</p>
+                    <p> प्रेमन यादव</p>
                 </div>
             </div>
         </div>
